# sdji-rename-tool

./: .gitignore  CHANGELOG.md  LICENSE  Package.swift  README.md  RELEASE_GITHUB.md  build_app.sh  package.json  pyproject.toml  rename_by_config.py  rename_config.yaml  rename_log.csv
Sources/SDJIRenameTool/: RenameEngine.swift
pic_rename_tool/: __main__.py  cli.py  default_config.yaml  gui.py
pic_rename_tool/assets/icons/: app.icns
scripts/: build_macos_app.sh  install_lightroom_export_action.sh
swift/SDJIRenameTool/: build_app.sh
swift/SDJIRenameTool/Sources/SDJIRenameTool/: AppCommandLine.swift  AppModel.swift  ConfigStore.swift  ExportActionInstaller.swift  RenameEngine.swift  SDJIRenameToolApp.swift
