[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pic-rename-tool"
version = "0.2.2"
description = "A configurable CLI to batch normalize image filenames."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ijoyer" }]
keywords = ["cli", "images", "rename", "batch", "dji"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.7"]
build = ["pyinstaller>=6.8"]

[project.scripts]
pic-rename = "pic_rename_tool.cli:main"
pic-rename-gui = "pic_rename_tool.gui:main"

[tool.setuptools.packages.find]
include = ["pic_rename_tool*"]

[tool.setuptools.package-data]
pic_rename_tool = [
  "default_config.yaml",
  "assets/fonts/Oxanium/*.ttf",
  "assets/fonts/Oxanium/OFL.txt",
  "assets/icons/*.svg",
  "assets/icons/*.icns",
]
